--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,7 +9,10 @@ Flask-JWT-Extended==4.7.1
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 googlemaps==4.10.0
+gunicorn==21.2.0
 greenlet==3.2.4
+geopy==2.4.1
+haversine==2.8.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -18,6 +21,8 @@ MarkupSafe==3.0.2
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
 python-dotenv==1.1.1
+python-dateutil==2.8.2
+PyJWT==2.10.1
 redis==6.4.0
 requests==2.32.5
 SQLAlchemy==2.0.41
