--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,60 @@
-# Dependências
-node_modules/
-venv/
+# Python
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
+*$py.class
+*.so
 .Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+venv/
 env/
-pip-log.txt
-pip-delete-this-directory.txt
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
+ENV/
+
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDEs and Editors
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# Logs and databases
 *.log
-.git
+*.sql
+*.sqlite
+
+# Environment variables
+.env
+.env.*
+!.env.example
+
+# Build files
+/dist/
+/build/
+
+# Local development
+.DS_Store
+Thumbs.db
 .mypy_cache
 .pytest_cache
 .hypothesis
