--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,2 +1,1 @@
-web: gunicorn src.main:app
-
+web: cd src && gunicorn --bind 0.0.0.0:$PORT --workers 4 --worker-class gthread --threads 2 --timeout 120 --preload wsgi:application
