--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,7 +22,6 @@ psycopg2-binary==2.9.10
 PyJWT==2.10.1
 python-dotenv==1.1.1
 python-dateutil==2.8.2
-PyJWT==2.10.1
 redis==6.4.0
 requests==2.32.5
 SQLAlchemy==2.0.41
@@ -30,3 +29,5 @@ typing_extensions==4.14.0
 urllib3==2.5.0
 Werkzeug==3.1.3
 beautifulsoup4==4.12.3
+Flask-Bcrypt==1.0.1
+python-slugify==8.0.4
