--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,1 @@
-web: cd src && gunicorn --bind 0.0.0.0:$PORT --workers 4 --worker-class gthread --threads 2 --timeout 120 --preload wsgi:application
+web: gunicorn --bind 0.0.0.0:$PORT --workers 1 --timeout 120 wsgi:application
