--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["gcc", "postgresql_16", "python39", "python39Packages.pip", "gunicorn"]
+nixPkgs = ["gcc", "postgresql_16", "python39", "python39Packages.pip", "python39Packages.gunicorn"]
 
 [phases.install]
 cmds = [
